--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -18,6 +18,7 @@ body {
     background: #151515;
     background-image: url(../image/images/bg-designer.jpg);
     background-size: 30%;
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-position: center top;
 }
@@ -31,21 +32,47 @@ body {
 /*classes padrão*/
 
 .projeto-expandido {
-    position: absolute;
-    width: 25%;
-    height: 25%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #222222;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-.projeto-expandido button {
-    color: white;
+.projeto-expandido img {
+    max-height: 60%;
+    margin: 0 auto;
+}
+
+.projeto-expandido button,
+.projeto-expandido p {
+    align-self: center;
+}
+
+
+/*estilização do título e descrição da imagem*/
+
+.p-titulo {
+    font-size: 3rem;
+    color: #e7c282;
+}
+
+.p-descricao {
+    font-size: 2rem;
+    color: #ffffff;
+}
+
+.p-button button {
+    margin-top: 15px;
+    color: #ffffff;
 }
 
 .d-esconder {
     display: none;
-}
-
-.d-mostrar {
-    display: block;
 }
 
 a {
@@ -230,6 +257,7 @@ main h3 {
 section {
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
 }
 
 button {
@@ -259,6 +287,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 100vw;
+    padding: 2rem 0;
 }
 
 footer h2 {
@@ -277,200 +307,159 @@ footer h2 {
     font-size: 1.4rem;
 }
 
-
-@media (max-width: 576px){
-    body{
+@media (max-width: 576px) {
+    body {
         margin: 30px;
         background: #1c1c1c;
         background-image: url(../image/images/bg-moon.jpg);
         background-size: 80%;
         background-repeat: no-repeat;
-        background-position: center top;  
+        background-position: center top;
     }
-
     #grid {
         grid-template-rows: auto 70vh auto;
     }
-
-    #nav-principal{
+    #nav-principal {
         display: none;
     }
-
-    #itens-menu-mobile{
+    #itens-menu-mobile {
         display: none;
     }
-
-    #nav-menu-mobile{
+    #nav-menu-mobile {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-
-    #nav-menu-mobile img{
+    #nav-menu-mobile img {
         margin-top: 10px;
     }
-
     .nome-perfil {
         font-size: 1.3rem;
     }
-
     hgroup {
         margin-left: 20px;
     }
-    
     hgroup h1 {
         font-size: 2rem;
     }
-    
     hgroup h2 {
         font-size: 1rem;
     }
-
     main h3 {
         margin-left: 20px;
     }
-
     article img {
         width: 120px;
         height: 190px;
         border-radius: 10px;
     }
-    
     article p {
         font-size: 1.3rem;
         width: 120px;
     }
-
-    #imagem-perfil{
+    #imagem-perfil {
         width: 70px;
         height: 70px;
     }
-
     #menu-hamburguer div {
         margin-top: 5px;
     }
-    
     #primeira-barra {
         width: 35px;
         left: 5px;
     }
-    
     #segunda-barra {
         width: 25px;
         left: 15px;
     }
-    
     #terceira-barra {
         width: 15px;
         left: 25px
     }
-
-    footer h2{
+    footer h2 {
         font-size: 1rem;
     }
-
-    #copyrigth{
+    #copyrigth {
         font-size: 1rem;
     }
 }
 
-@media (min-width: 576px) and (max-width: 850px){
-    body{
+@media (min-width: 576px) and (max-width: 850px) {
+    body {
         margin: 30px;
         background: #1c1c1c;
         background-image: url(../image/images/bg-moon.jpg);
         background-size: 60%;
         background-repeat: no-repeat;
-        background-position: center top;  
+        background-position: center top;
     }
-    
     #grid {
         grid-template-rows: auto auto auto;
     }
-    
-    #nav-principal{
+    #nav-principal {
         display: none;
     }
-
-    #itens-menu-mobile{
+    #itens-menu-mobile {
         display: none;
     }
-
-    #nav-menu-mobile{
+    #nav-menu-mobile {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
-
-    #nav-menu-mobile img{
+    #nav-menu-mobile img {
         margin-top: 10px;
     }
-
     .nome-perfil {
         font-size: 1.3rem;
     }
-
     hgroup {
         margin-left: 20px;
     }
-    
     hgroup h1 {
         font-size: 2rem;
     }
-    
     hgroup h2 {
         font-size: 1rem;
     }
-
     main h3 {
         margin-left: 20px;
     }
-
     article img {
         width: 120px;
         height: 190px;
         border-radius: 10px;
     }
-    
     article p {
         font-size: 1.3rem;
         width: 120px;
     }
-
-    #imagem-perfil{
+    #imagem-perfil {
         width: 70px;
         height: 70px;
     }
-
     #menu-hamburguer div {
         margin-top: 5px;
     }
-    
     #primeira-barra {
         width: 35px;
         left: 5px;
     }
-    
     #segunda-barra {
         width: 25px;
         left: 15px;
     }
-    
     #terceira-barra {
         width: 15px;
         left: 25px
     }
-
-    footer{
+    footer {
         margin-top: 50px;
     }
-
-    footer h2{
+    footer h2 {
         font-size: 1rem;
     }
-
-    #copyrigth{
+    #copyrigth {
         font-size: 1rem;
     }
-
 }
