--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -97,14 +97,14 @@
             <h3>Últimos Projetos</h3>
 
             <section id="ultimosProjetos">
-                <% for(let x = 0; x < 3; x++){%>
+                <% if(ultimosProjetos>0){for(let x = 0; x < 3; x++){%>
                     <article>
                         <button onclick="expandirProjeto(this.value)" value="<%=ultimosProjetos[x].url %>"><img src="image/tmp/uploads/<%=ultimosProjetos[x].url %>" alt=""></button>
                         <p>
                             <%=ultimosProjetos[x].tituloImagem%>
                         </p>
                     </article>
-                    <%}%>
+                    <%} }%>
             </section>
 
             <h3>Todos os Projetos</h3>
@@ -112,7 +112,9 @@
             <!--Seção para mostrar todos os projetos -->
             <section id="todosProjetos">
 
-                <% for(let x = 0; x < projetos.length; x++){%>
+
+                <% if(projetos.length > 0){ for(let x = 0; x < projetos.length; x++){%>
+
                     <article>
                         <!-- Quando clicar em cima da imagem desejada, automaticamente através do javascript aparecerá um modal, uma janela -->
                         <button onclick="expandirProjeto(this.value)" value="<%=projetos[x].url %>"><img src="image/tmp/uploads/<%=projetos[x].url %>" alt=""></button>
@@ -134,7 +136,9 @@
                             <button onclick="esconderProjeto(this.value)" value="<%=projetos[x].url %>">Fechar</button>
                         </p>
                     </span>
-                    <%}%>
+
+                    <%} }%>
+
 
             </section>
 
